bitfields/tests/compile_error_cases/errors/array_fields/array_field_non_u8_element_type.rs
use bitfields::bitfield;

#[bitfield(u32)]
pub struct Bitfield {
    a: [u16; 2],
}

fn main() {}

